[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygxi"
version = "0.1.0"
authors = [
    {name = "Jacopo Abramo"}
]
description = "Python bindings for the Daheng Imaging Galaxy SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/maximecharriere/gxipy"

[tool.hatch.build]
packages = ["src/gxipy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "device_required: marks tests that require a physical camera device (deselect with '-m \"not device_required\"')"
]